--- a/src/SentimentAnalysis.ipynb
+++ b/src/SentimentAnalysis.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
@@ -20,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/Tristan/books/src'"
+       "'/Users/mark/src/books/src'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -50,16 +48,22 @@
     {
      "data": {
       "text/plain": [
-       "['.DS_Store', 'test', 'output']"
+       "['.DS_Store',\n",
+       " 'bookdata.csv',\n",
+       " 'bookdata_alt.csv',\n",
+       " 'final_data.csv',\n",
+       " 'output',\n",
+       " 'test',\n",
+       " 'unique_genres.txt']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "os.listdir(config.dataset_dir)\n"
+    "os.listdir(config.dataset_dir)"
    ]
   },
   {
@@ -155,8 +159,7 @@
     "    data['neu score'] = neu.values\n",
     "    data['comp score'] = com.values\n",
     "    data.to_csv(config.dataset_dir + 'output/final_data.csv')\n",
-    "    return data\n",
-    "\n"
+    "    return data"
    ]
   },
   {
@@ -2838,142 +2841,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Diary and Novel\n",
-      "Fantasy literature\n",
-      "War\n",
-      "Epistolary novel\n",
-      "Short stories\n",
-      "Bush poetry\n",
-      "Fantasy novel\n",
-      "Sketch story\n",
-      "Romance novel\n",
-      "Autobiographical novel\n",
-      "Romantic novel\n",
-      "Young-adult fiction\n",
-      "Non-fiction\n",
-      "Poetry\n",
-      "Historical\n",
-      "Non-Fiction\n",
-      "Christian fiction\n",
-      "Encyclopedia\n",
-      "Thriller (genre)\n",
-      "Satirical\n",
-      "Crime fiction\n",
-      "Prose poetry\n",
-      "Young adult fiction\n",
-      "Philosophy\n",
-      "Humor\n",
-      "Historical fantasy\n",
-      "Detective fiction\n",
-      "Biography in literature\n",
-      "Decadent movement\n",
-      "Cookbook\n",
-      "Textbook\n",
-      "Essay\n",
-      "History of Ideas\n",
-      "Adventure novel\n",
-      "Family saga\n",
-      "Mystery novel\n",
-      "Short story\n",
-      "Novella\n",
-      "Children's literature\n",
-      "Biographical novel\n",
-      "Comedy\n",
-      "Science fantasy\n",
-      "Detective novel\n",
-      "Lost World (genre)\n",
-      "Social commentary\n",
-      "Political journalism\n",
-      "Adventure fiction\n",
-      "Nonfiction\n",
-      "Picture book\n",
-      "Comic novel\n",
-      "Horror novel\n",
-      "Comedy novel\n",
-      "Science\n",
-      "Science fiction\n",
-      "Historical Fiction\n",
-      "Travel literature\n",
-      "Literary realism\n",
-      "Historical fiction\n",
-      "Fiction\n",
-      "Tragedy\n",
-      "Dystopian novel\n",
-      "Children's book\n",
-      "Black comedy\n",
-      "Fantasy/Ethnic novel\n",
-      "Crime novel\n",
-      "Economics\n",
-      "Gothic fiction\n",
-      "Satire\n",
-      "Syair\n",
-      "Temperance movement\n",
-      "Sword and sorcery\n",
-      "Wuxia\n",
-      "Bildungsroman\n",
-      "Fantasy\n",
-      "Children's novel\n",
-      "Slave narrative\n",
-      "Frame story\n",
-      "Non-Profit\n",
-      "Interior design\n",
-      "Victorian literature\n",
-      "Folklore\n",
-      "Christian mythology\n",
-      "Historical novels\n",
-      "Juvenile literature\n",
-      "Reference work\n",
-      "Young-Adult Fiction\n",
-      "Drama\n",
-      "Travel writing\n",
-      "Political novel\n",
-      "Science Fantasy\n",
-      "Romanticism\n",
-      "Christian mysticism\n",
-      "Utopian and dystopian fiction\n",
-      "Mystery (fiction)\n",
-      "Western novel\n",
-      "World War II\n",
-      "Horror fiction\n",
-      "Sensation novel\n",
-      "Military history\n",
-      "Western (genre)\n",
-      "Autobiography\n",
-      "War novel\n",
-      "Political thriller\n",
-      "Roman à clef\n",
-      "Fantasy fiction\n",
-      "Children's books\n",
-      "Biography\n",
-      "Psychological Thriller\n",
-      "Mystery fiction\n",
-      "Young adult novel\n",
-      "Historical novel\n",
-      "Apocalyptic fiction\n",
-      "Adventure\n",
-      "Philosophical literature\n",
-      "Spy novel\n",
-      "History\n",
-      "Philosophical fiction\n",
-      "Young adult novels\n",
-      "Memoir\n",
-      "Dark fantasy\n",
-      "Gothic novel\n",
-      "Novel\n"
+      "Diary and Novel\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../datasets/output/sentiment_word_texts/2055.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-904903d5d246>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mwordcloud_per_genre\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-11-904903d5d246>\u001b[0m in \u001b[0;36mwordcloud_per_genre\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbook_list\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenre\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m             \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtfidf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbook_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m             \u001b[0mtf_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtfidf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_tf_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbook_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m             \u001b[0mtfidf_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtfidf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mperform_tfidf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbook_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtf_matrix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/books/src/tfidf.py\u001b[0m in \u001b[0;36mcreate_index\u001b[0;34m(directory, book_list)\u001b[0m\n\u001b[1;32m     25\u001b[0m             text = open(\n\u001b[1;32m     26\u001b[0m                 \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m                 errors='replace').read()\n\u001b[0m\u001b[1;32m     28\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mterm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m                 \u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mterm\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../datasets/output/sentiment_word_texts/2055.txt'"
      ]
     }
    ],
    "source": [
     "def wordcloud_per_genre():\n",
-    "    data = pd.read_csv(config.dataset_dir + 'output/final_data.csv')\n",
-    "    genres_file = open(config.dataset_dir + 'output/unique_genres.txt', 'r')\n",
+    "    data = pd.read_csv(config.dataset_dir + 'final_data.csv')\n",
+    "    genres_file = open(config.dataset_dir + 'unique_genres.txt', 'r')\n",
     "    genre_list = [genre.strip('\\n') for genre in genres_file.readlines()]\n",
     "    directory = config.dataset_dir + 'output/sentiment_word_texts/'\n",
     "\n",
@@ -3000,7 +2904,7 @@
     "        else:\n",
     "            continue\n",
     "\n",
-    "        \n",
+    "\n",
     "wordcloud_per_genre()"
    ]
   },
@@ -3039,7 +2943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
