--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas"
+    "import pandas, os"
    ]
   },
   {
@@ -1329,6 +1329,137 @@
    ],
    "source": [
     "info.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentiment_words = os.listdir(config.dataset_dir + 'output/sentiment_word_texts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['45557-0.txt',\n",
+       " '45557-8.txt',\n",
+       " '45557.txt',\n",
+       " '45564.txt',\n",
+       " '45631-8.txt',\n",
+       " '45631.txt',\n",
+       " '45640-8.txt',\n",
+       " '45640.txt',\n",
+       " '45645-8.txt',\n",
+       " '45645.txt']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_sentiment_vector(data):\n",
+    "    # data :: {'pos score', 'neg score', 'neu score', 'comp score', 'amt pos','amt neg}\n",
+    "    return list(data.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {} # {bookname: genre}\n",
+    "for filename in sentiment_words[:20:\n",
+    "    # name = filename.split('.')[0]\n",
+    "    book = info.loc[info['filename'] == filename]\n",
+    "    genre = book.genre.item()                            \n",
+    "    #      'pos score', 'neg score', 'neu score', 'comp score', 'amt pos','amt neg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Young-Adult Fiction'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = sentiment_words[0]\n",
+    "data = info.loc[info['filename'] == s]\n",
+    "genre = data.genre.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'filename', 'title.1', 'author', 'release year', 'genre',\n",
+       "       'pos score', 'neg score', 'neu score', 'comp score', 'amt pos',\n",
+       "       'amt neg'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'filename', 'title.1', 'author', 'release year', 'genre',\n",
+       "       'pos score', 'neg score', 'neu score', 'comp score', 'amt pos',\n",
+       "       'amt neg'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.keys()"
    ]
   },
   {
